--- a/features/fixtures/cucumber_tags/datasets_search_geoss_atom.yml
+++ b/features/fixtures/cucumber_tags/datasets_search_geoss_atom.yml
@@ -45,7 +45,7 @@ http_interactions:
             xmlns:os="http://a9.com/-/spec/opensearch/1.1/"
             xmlns:georss="http://www.georss.org/georss/10"
             xmlns="http://www.w3.org/2005/Atom"
-            xmlns:dc="http://purl.org/dc/elements/"
+            xmlns:dc="http://purl.org/dc/elements/1.1/"
             xmlns:echo="https://cmr.earthdata.nasa.gov/search/site/docs/search/api.html#atom"
             xmlns:esipdiscovery="http://commons.esipfed.org/ns/discovery/1.2/"
             xmlns:gml="http://www.opengis.net/gml" esipdiscovery:version="1.2"
