CMR-7475: use EDL tokens instead of ECHO tokens in OpenSearch

--- a/config/application.yml.template
+++ b/config/application.yml.template
@@ -3,6 +3,7 @@ current: &current
   catalog_rest_endpoint: https://cmr.earthdata.nasa.gov/search/
   USE_CWIC_SERVER: true
   echo_rest_endpoint: https://api.echo.nasa.gov/echo-rest/
+  edl_endpoint: https://urs.earthdata.nasa.gov/api/users/
   contact: @MAIL_SENDER@
   mode: @MODE@
   public_catalog_rest_endpoint: https://cmr.earthdata.nasa.gov/search/
